--- a/index.html
+++ b/index.html
@@ -8,15 +8,24 @@
         <link rel= "stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>        
-        <header>     
+        <header>
             <h1>
                 <a class="head" href="#">Finance News
                 </a>
             </h1>
                 <p>Thursday 15 October 2020                
                 </p>
-        </header>        
-        <nav> <!-- menu -->
+        </header> <!-- hamburger -->
+        <header id="menu">
+            <div class="line"></div>
+            <div class="hamburger"></div>
+            <div class="line"></div>
+            <div class="hamburger"></div>
+            <div class="line"></div>
+            <div class="hamburger"></div>
+            <div class="line"></div>
+        </header>
+        <nav> <!-- menu -->            
             <ul> 
                 <li>
                     <a href="">Finance                    
