--- a/index.html
+++ b/index.html
@@ -3,39 +3,53 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Finance News</title>
+        <title>
+            Finance News
+        </title>
         <link rel= "stylesheet" type="text/css" href="css/normalize.css">
         <link rel= "stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>        
         <header>
             <h1>
-                <a class="head" href="#">Finance News
+                <a class="head" href="#">
+                    Finance News
                 </a>
             </h1>
-                <p>Thursday 15 October 2020                
+                <p>
+                    Thursday 15 October 2020                
                 </p>
         </header> <!-- hamburger -->
         <header id="menu">
-            <div class="line"></div>
-            <div class="hamburger"></div>
-            <div class="line"></div>
-            <div class="hamburger"></div>
-            <div class="line"></div>
-            <div class="hamburger"></div>
-            <div class="line"></div>
+            <div class="line">
+            </div>
+            <div class="hamburger">
+            </div>
+            <div class="line">
+           </div>
+            <div class="hamburger">                
+            </div>
+            <div class="line">                
+            </div>
+            <div class="hamburger">                
+            </div>
+            <div class="line">                
+            </div>
         </header>
         <nav> <!-- menu -->            
             <ul> 
                 <li>
-                    <a href="">Finance                    
+                    <a href="">
+                        Finance                    
                     </a>
                 </li>
                 <li>
-                    <a href="">Economy                        
+                    <a href="">
+                        Economy                        
                     </a>
                 </li>
-                <li><a href="">Politics                    
+                <li><a href="">
+                        Politics                    
                     </a>
                 </li>                        
             </ul>
@@ -44,34 +58,41 @@
             <div id="showcase">
                 <div class="main-news">
                     <h2>
-                        <a href="">Banks plan to hike cost of credit card borrowing                            
+                        <a href="">
+                            Banks plan to hike cost of credit card borrowing                            
                         </a>
                     </h2>
-                        <p>Banks reveals rising rates in approach to Christmas and lenders’ plans to restrict loan products soon.
+                        <p>
+                            Banks reveals rising rates in approach to Christmas and lenders’ plans to restrict loan products soon.
                        </p>
                         <figure>
                             <img src="img/5616.jpg" alt="Various credit cards">
                         </figure>
                     <h2>
-                        <a href="">World Bank calls for debt relief programme as amounts owed hit record levels                            
+                        <a href="">
+                            World Bank calls for debt relief programme as amounts owed hit record levels                            
                         </a>
                     </h2>
-                        <p>Debt of 73 low-income countries at end of 2019 was up 9.5% on previous year.
+                        <p>
+                            Debt of 73 low-income countries at end of 2019 was up 9.5% on previous year.
                         </p>
                         <figure>
                             <img src="img/4785.jpg" alt="The World Bank President">
                         </figure>
                     <h2>
-                        <a href="">Pret a Manger to cut a further 400 jobs and close six more stores
+                        <a href="">
+                            Pret a Manger to cut a further 400 jobs and close six more stores
                         </a>
                     </h2>
-                        <p>Cuts follow 2,900 job losses and closure of 30 outlets as chain struggles amid Covid crisis.                            
+                        <p>
+                            Cuts follow 2,900 job losses and closure of 30 outlets as chain struggles amid Covid crisis.                            
                         </p>
                         <figure>
                             <img src="img/2986.jpg" alt="A Pret a Manager top sign">
                         </figure>
                     <h2>
-                        <a href="">Banks not ready for negative interest rates, says NatWest chairman                            
+                        <a href="">
+                            Banks not ready for negative interest rates, says NatWest chairman                            
                         </a>
                     </h2>
                         <p>
@@ -82,49 +103,88 @@
                         </figure>
                 </div>
                 <div class="secondary-news">
-                    <h3><a href="">IMF urges governments to borrow to fight impact of Covid-19</a></h3>
-                    <figure><img src="img/4725.jpg" alt="The IMF managing director, Kristalina Georgieva, and World Bank president, David Malpass, at a joint press briefing in Washington"></figure>
-                    <h3><a href="">WTO rules EU can apply tariffs on US goods as trade war deepens</a></h3>
+                    <h3>
+                        <a href="">
+                            IMF urges governments to borrow to fight impact of Covid-19
+                        </a>
+                    </h3>
+                    <figure>
+                        <img src="img/4725.jpg" alt="The IMF managing director, Kristalina Georgieva, and World Bank president, David Malpass, at a joint press briefing in Washington">
+                    </figure>
+                    <h3>
+                        <a href="">
+                            WTO rules EU can apply tariffs on US goods as trade war deepens
+                        </a>
+                    </h3>
                     <figure>
                         <img src="img/6000.jpg" alt="USA and EU flags">
                     </figure>
-                    <h3><a href="">BA fined record £20m for customer data breach</a></h3>
+                    <h3>
+                        <a href="">
+                            BA fined record £20m for customer data breach
+                        </a>
+                    </h3>
                     <figure>
                         <img src="img/3070.jpg" alt="The email sent to BA customers after data breach in 2018">
                     </figure>
-                    <h3><a href="">'They have to think differently' – shoppers on John Lewis's new strategy</a></h3>
+                    <h3>
+                        <a href="">
+                            'They have to think differently' – shoppers on John Lewis's new strategy
+                        </a>
+                    </h3>
                     <figure>
                         <img src="img/4896.jpg" alt="Customers outside the John Lewis store in Kingston">
                     </figure>
-                    <h3><a href="">Serco profits surge thanks to Covid-19 test-and-trace contract</a></h3>
-                    <figure><img src="img/3501.jpg" alt="Demonstrator at a protest against Serco’s"></figure>
-                    <h3><a href="">Plan for UK shops to offer cashback without a purchase</a></h3>
+                    <h3>
+                        <a href="">
+                            Serco profits surge thanks to Covid-19 test-and-trace contract
+                        </a>
+                    </h3>
+                    <figure>
+                        <img src="img/3501.jpg" alt="Demonstrator at a protest against Serco’s">
+                    </figure>
+                    <h3>
+                        <a href="">
+                            Plan for UK shops to offer cashback without a purchase
+                        </a>
+                    </h3>
                     <figure>
                         <img src="img/2483.jpg" alt="Supermarket checkout">
                     </figure>
-                    <h3><a href="">'It's all fake': Trump's manufacturing jobs promises ring hollow in midwest</a></h3>
+                    <h3>
+                        <a href="">
+                            'It's all fake': Trump's manufacturing jobs promises ring hollow in midwest
+                        </a>
+                    </h3>
                     <figure>
                         <img src="img/5614.jpg" alt="Donald Trump poses with the Lordstown Motors CEO, Steve Burns, and workers at the White House last month.">
                     </figure>
                     </div>
                 <div class="ads">
                     <figure>
-                        <a href=""><img src="img/ad01.png" alt="bank advertising"></a>
+                        <a href="">
+                            <img src="img/ad01.png" alt="bank advertising">
+                        </a>
                     </figure>
                     <figure>
-                        <a href=""><img src="img/ad02.jpg" alt="car advertising"></a>
+                        <a href=""><img src="img/ad02.jpg" alt="car advertising">
+                        </a>
                     </figure>
                     <figure>
-                        <a href=""><img src="img/ad03.jpg" alt="ps5 advertising"></a>
+                        <a href=""><img src="img/ad03.jpg" alt="ps5 advertising">
+                        </a>
                     </figure>
                     <figure>
-                        <a href=""><img src="img/ad04.png" alt="shell advertising"></a>
+                        <a href=""><img src="img/ad04.png" alt="shell advertising">
+                        </a>
                     </figure>
                 </div>
             </div>
         </section>
         <footer>
-            <p>Finance News Web Design, Copyright &copy; 2020</p>
+            <p>
+                Finance News Web Design, Copyright &copy; 2020
+            </p>
         </footer>
     </body>
 </html>
