--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
             Finance News
         </title>
         <link rel= "stylesheet" type="text/css" href="css/normalize.css">
-        <link rel= "stylesheet" type="text/css" href="css/style.css">
+        <link rel= "stylesheet" type="text/css" href="css/header.css">
+        <link rel= "stylesheet" type="text/css" href="css/body.css">
+        <link rel= "stylesheet" type="text/css" href="css/footer.css">
     </head>
     <body>        
         <header>
