html and css organized

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                 <p>
                     Thursday 15 October 2020                
                 </p>
-        </header> <!-- hamburger -->
-        <header id="menu">
+        </header> 
+        <header id="menu"> <!-- hamburger -->
             <div class="line">
             </div>
             <div class="hamburger">
