--- a/subscription.html
+++ b/subscription.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Suscription form</title>
     <link rel= "stylesheet" type="text/css" href="css/normalize.css">
     <link rel= "stylesheet" type="text/css" href="css/header.css">
     <link rel= "stylesheet" type="text/css" href="css/body.css">
@@ -66,6 +66,9 @@
                     <div class="box">
                         <label for="name">Full name:</label>
                         <input type="text" id="name">
+                        <div id="wName">
+                            
+                        </div>
                     </div>
                     <div class="box">
                         <label for="email">E-mail:</label>            
