--- a/subscription.html
+++ b/subscription.html
@@ -72,41 +72,59 @@
                     </div>
                     <div class="box">
                         <label for="email">E-mail:</label>            
-                        <input type="email" id="email"> 
+                        <input type="email" id="email">
+                        <div id="wEmail">                              
+                        </div> 
                     </div>
                     <div class="box">
                         <label for="password">Password:</label>
                         <input type="password" id="password">
+                        <div id="wPassword">                              
+                        </div>
                     </div>
                     <div class="box">
                         <label for="repeatPass">Repeat password:</label>
                         <input type="password" id="repeatPass">
+                        <div id="wRepeat">                              
+                        </div>
                     </div>
                     <div class="box">
                         <label for="age">Age:</label>
                         <input type="age" id="age">
+                        <div id="wAge">                              
+                        </div>
                     </div>                    
                 </div>
                 <div class="colum">
                     <div class="box">
                         <label for="phone">Phone number:</label>
                         <input type="phone" id="phone">
+                        <div id="wPhone">                              
+                        </div>
                     </div>
                     <div class="box">
                         <label for="adress">Adress:</label>
                         <input type="adress" id="adress">
+                        <div id="wAdress">                              
+                        </div>
                     </div>
                     <div class="box">
                         <label for="city">City:</label>            
                         <input type="city" id="city"> 
+                        <div id="wCity">                              
+                        </div>
                     </div>
                     <div class="box">
                         <label for="zipCode">Zip code:</label>
                         <input type="zipCode" id="zipCode">
+                        <div id="wZipCode">                              
+                        </div>
                     </div>
                     <div class="box">
                         <label for="id">Id:</label>
-                        <input type="id" id="id">                    
+                        <input type="id" id="id">    
+                        <div id="wId">                              
+                        </div>                
                     </div>
                 </div>
             </div>
@@ -114,9 +132,6 @@
                 <button value="submit" class="submit">Submit</button>                
             </div>
         </form>        
-        <div id="error">
-            
-        </div>
     </section>
     <footer>
         <p>
