test submit button

--- a/subscription.html
+++ b/subscription.html
@@ -150,7 +150,7 @@
                 </div>
             </div>
             <div class="submit-btn">
-                <button id="submit" value="submit">
+                <button id="submitForm" value="submit">
                     Submit
                 </button>                
             </div>
